changed:Modifique el metodo en guardar